Update doc and added api templates
